try to fix jar conflick with spark 2.3.0

--- a/streamingpro-dsl/pom.xml
+++ b/streamingpro-dsl/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.5.3</version>
+            <version>${antlr4-runtime-versoin}</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>org.scala-lang</groupId>-->
