--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 
         <serviceframework.version>2.0.0</serviceframework.version>
         <scope>provided</scope>
+        <antlr4-runtime-versoin>4.5.3</antlr4-runtime-versoin>
     </properties>
 
 
@@ -127,9 +128,11 @@
             <id>spark-1.6.1</id>
             <properties>
                 <spark.version>1.6.1</spark.version>
+                <hadoop-client-version>2.6.0</hadoop-client-version>
                 <spark.streaming.kafka.artifactId>spark-streaming-kafka_${scala.binary.version}
                 </spark.streaming.kafka.artifactId>
                 <spark.sql.kafka.artifactId>spark-streaming-kafka_${scala.binary.version}</spark.sql.kafka.artifactId>
+                <antlr4-runtime-versoin>4.5.3</antlr4-runtime-versoin>
             </properties>
             <modules>
                 <module>streamingpro-spark</module>
@@ -149,6 +152,8 @@
                 </spark.streaming.kafka.artifactId>
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
                 <spark.version>2.1.1</spark.version>
+                <hadoop-client-version>2.6.0</hadoop-client-version>
+                <antlr4-runtime-versoin>4.5.3</antlr4-runtime-versoin>
             </properties>
             <modules>
                 <module>streamingpro-spark-2.0</module>
@@ -169,6 +174,8 @@
                 </spark.streaming.kafka.artifactId>
                 <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
                 <spark.version>2.2.0</spark.version>
+                <hadoop-client-version>2.6.0</hadoop-client-version>
+                <antlr4-runtime-versoin>4.5.3</antlr4-runtime-versoin>
             </properties>
             <modules>
                 <module>streamingpro-spark-2.0</module>
@@ -185,24 +192,90 @@
                     <version>${serviceframework.version}</version>
                     <exclusions>
                         <!--<exclusion>-->
-                            <!--<groupId>org.eclipse.jetty</groupId>-->
-                            <!--<artifactId>jetty-server</artifactId>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-server</artifactId>-->
                         <!--</exclusion>-->
                         <!--<exclusion>-->
-                            <!--<groupId>org.eclipse.jetty</groupId>-->
-                            <!--<artifactId>jetty-http</artifactId>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-http</artifactId>-->
                         <!--</exclusion>-->
                         <!--<exclusion>-->
-                            <!--<groupId>org.eclipse.jetty</groupId>-->
-                            <!--<artifactId>jetty-io</artifactId>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-io</artifactId>-->
                         <!--</exclusion>-->
                         <!--<exclusion>-->
-                            <!--<groupId>org.eclipse.jetty</groupId>-->
-                            <!--<artifactId>jetty-continuation</artifactId>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-continuation</artifactId>-->
                         <!--</exclusion>-->
                         <!--<exclusion>-->
-                            <!--<groupId>org.eclipse.jetty</groupId>-->
-                            <!--<artifactId>jetty-util</artifactId>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-util</artifactId>-->
+                        <!--</exclusion>-->
+                        <exclusion>
+                            <groupId>org.eclipse.jetty</groupId>
+                            <artifactId>jetty-servlet</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>junit</groupId>
+                            <artifactId>junit</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.scala-lang</groupId>
+                            <artifactId>jline</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.alibaba</groupId>
+                            <artifactId>dubbo</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+            </dependencies>
+        </profile>
+
+
+        <profile>
+            <id>spark-2.3.0</id>
+            <properties>
+                <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_${scala.binary.version}
+                </spark.streaming.kafka.artifactId>
+                <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
+                <spark.version>2.3.0</spark.version>
+                <hadoop-client-version>2.6.5</hadoop-client-version>
+                <antlr4-runtime-versoin>4.7</antlr4-runtime-versoin>
+            </properties>
+            <modules>
+                <module>streamingpro-spark-2.0</module>
+            </modules>
+            <dependencies>
+                <dependency>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>javax.servlet-api</artifactId>
+                    <version>3.1.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>net.csdn</groupId>
+                    <artifactId>serviceframework-jetty-9-server</artifactId>
+                    <version>${serviceframework.version}</version>
+                    <exclusions>
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-server</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-http</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-io</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-continuation</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                        <!--<groupId>org.eclipse.jetty</groupId>-->
+                        <!--<artifactId>jetty-util</artifactId>-->
                         <!--</exclusion>-->
                         <exclusion>
                             <groupId>org.eclipse.jetty</groupId>
