--- a/streamingpro-dsl-legacy/pom.xml
+++ b/streamingpro-dsl-legacy/pom.xml
@@ -9,18 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamingpro-dsl</artifactId>
+    <artifactId>streamingpro-dsl-legacy</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.7.1</version>
+            <version>4.5.3</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.scala-lang</groupId>-->
-            <!--<artifactId>scala-library</artifactId>-->
-            <!--<version>${scala.version}</version>-->
+        <!--<groupId>org.scala-lang</groupId>-->
+        <!--<artifactId>scala-library</artifactId>-->
+        <!--<version>${scala.version}</version>-->
         <!--</dependency>-->
     </dependencies>
+
 
 </project>
