--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>streamingpro-hbase</module>
         <module>streamingpro-redis</module>
         <module>streamingpro-model</module>
+        <module>streamingpro-crawler</module>
     </modules>
 
     <properties>
