support crawler sql

--- a/streamingpro-crawler/pom.xml
+++ b/streamingpro-crawler/pom.xml
@@ -11,11 +11,25 @@
 
     <artifactId>streamigpro-crawler</artifactId>
 
-    <properties>
-        <scope>compile</scope>
-    </properties>
-
     <dependencies>
+        <dependency>
+            <groupId>streaming.king</groupId>
+            <artifactId>streamingpro-spark-common</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>${spark.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.version}</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -30,6 +44,11 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>us.codecraft</groupId>
+            <artifactId>xsoup</artifactId>
+            <version>0.3.1</version>
         </dependency>
     </dependencies>
 
