--- a/streamingpro-crawler/pom.xml
+++ b/streamingpro-crawler/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>xsoup</artifactId>
             <version>0.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>cn.edu.hfut.dmic.webcollector</groupId>
+            <artifactId>WebCollector</artifactId>
+            <version>2.71</version>
+        </dependency>
+
     </dependencies>
 
 </project>
