添加代理支持，简化抓取设置

--- a/streamingpro-crawler/pom.xml
+++ b/streamingpro-crawler/pom.xml
@@ -19,6 +19,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>streaming.king</groupId>
+            <artifactId>streamingpro-spark-common</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
             <version>${spark.version}</version>
