支持模型部署

--- a/streamingpro-spark-2.0/src/main/resources-local/application.yml
+++ b/streamingpro-spark-2.0/src/main/resources-local/application.yml
@@ -18,7 +18,7 @@ test:
            disable: true
 
 application:
-    controllerNames: streaming.rest.RestController
+    controllerNames: streaming.rest.RestController,streaming.rest.RestPredictController
     service:
     util:
     test:
