fix dl4j compile error;add opencv support in streamingpro-spark-2.0

--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -134,6 +134,19 @@
                 </dependency>
             </dependencies>
         </profile>
+
+        <profile>
+            <id>opencv-support</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.bytedeco</groupId>
+                    <artifactId>javacv-platform</artifactId>
+                    <version>1.4</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+
         <profile>
             <id>online</id>
             <properties>
