增加OpenCVImage模块，支持对图片相关处理

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>streamingpro-redis</module>
         <module>streamingpro-dl4j</module>
         <module>streamingpro-tensorflow</module>
+        <module>streamingpro-opencv</module>
     </modules>
 
     <properties>
