--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -139,9 +139,9 @@
             <id>opencv-support</id>
             <dependencies>
                 <dependency>
-                    <groupId>org.bytedeco</groupId>
-                    <artifactId>javacv-platform</artifactId>
-                    <version>1.4</version>
+                    <groupId>streaming.king</groupId>
+                    <artifactId>streamingpro-opencv</artifactId>
+                    <version>${parent.version}</version>
                 </dependency>
             </dependencies>
         </profile>
