--- a/streamingpro-opencv/pom.xml
+++ b/streamingpro-opencv/pom.xml
@@ -39,5 +39,10 @@
             <version>${spark.version}</version>
             <scope>${scope}</scope>
         </dependency>
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+        </dependency>
     </dependencies>
 </project>
