--- a/streamingpro-spark-2.3.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.3.0-adaptor/pom.xml
@@ -10,6 +10,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streamingpro-spark-2.3.0-adaptor</artifactId>
-
-
+    <dependency>
+        <groupId>streaming.king</groupId>
+        <artifactId>streamingpro-spark-common</artifactId>
+        <version>${project.parent.version}</version>
+    </dependency>
 </project>
