--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -15,7 +15,7 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-client</artifactId>
             <version>2.6.5</version>
-            <scope>${scope}</scope>
+            <scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <groupId>javax.servlet</groupId>
