--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ script:
   - mvn test -pl streamingpro-mlsql -am -Ponline -Pscala-2.11 -Phive-thrift-server -Pspark-2.2.0 -Pdsl-legacy -Pcrawler -Pshade -Popencv-support
 
 before_install: [
-    "git clone https://github.com/allwefantasy/ServiceFramework.git",
-    "cd ServiceFramework",
-    "mvn install -Pscala-2.11 -Pjetty-9 -Pweb-include-jetty-9"
+    "git clone https://github.com/allwefantasy/ServiceFramework.git allwefantasy/ServiceFramework",
+    "cd allwefantasy/ServiceFramework",
+    "mvn install -Pscala-2.11 -Pjetty-9 -Pweb-include-jetty-9",
+    "cd ../.."
   ]
