--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ script:
   - ulimit -a
   - mvn test -pl streamingpro-mlsql -am -Ponline -Pscala-2.11 -Phive-thrift-server -Pspark-2.2.0 -Pdsl-legacy -Pcrawler -Popencv-support
 
+install: [
+    "mvn install -pl streamingpro-mlsql -am -Ponline -Pscala-2.11 -Phive-thrift-server -Pspark-2.2.0 -Pdsl-legacy -Pcrawler -Popencv-support -DskipTests=true -Dmaven.javadoc.skip=true -Dgpg.skip=true"
+  ]
+
 before_install: [
     "git clone https://github.com/allwefantasy/ServiceFramework.git allwefantasy/ServiceFramework",
     "cd allwefantasy/ServiceFramework",
