issue#331 完成PythonAlg的调整，通过参数keepVersioin可以保持模型版本和训练参数等各种信息

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ project/plugins/project/
 
 /jni
 /streamingpro-spark-2.0/src/main/resources-local/python/python_temp.pickle
+streamingpro-crawler/tasks/
