新增ALS模型；重新规划模型路径

--- a/streamingpro-spark-2.2.0-adaptor/pom.xml
+++ b/streamingpro-spark-2.2.0-adaptor/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>streamingpro-spark-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_${scala.binary.version}</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
