--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,27 @@
     <artifactId>streamingpro</artifactId>
     <packaging>pom</packaging>
     <version>1.1.3</version>
+
+    <name>StreamingPro Parent POM</name>
+    <url>https://github.com/allwefantasy/streamingpro</url>
+    <licenses>
+        <license>
+            <name>Apache 2.0 License</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>allwefantasy</id>
+            <name>ZhuHaiLin</name>
+            <email>allwefantasy@gmail.com</email>
+        </developer>
+    </developers>
+    <issueManagement>
+        <url>https://github.com/allwefantasy/streamingpro/issues</url>
+    </issueManagement>
+
     <modules>
         <module>streamingpro-commons</module>
         <module>streamingpro-spark-common</module>
@@ -699,5 +720,5 @@
                 </executions>
             </plugin>
         </plugins>
-   </build>
+    </build>
 </project>
