修正python返回值解析异常的错误

--- a/streamingpro-jython/pom.xml
+++ b/streamingpro-jython/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.python</groupId>
-            <artifactId>jython</artifactId>
+            <artifactId>jython-standalone</artifactId>
             <version>2.7.0</version>
         </dependency>
     </dependencies>
